--- a/firebasepoc.html
+++ b/firebasepoc.html
@@ -4,6 +4,7 @@
     <title>Game POC</title>
     <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-database.js"></script>
+    <script src="qrcode.min.js"></script>
 </head>
 <body>
     <input type="text" id="gameIdInput" placeholder="Enter Game ID">
