--- a/index.html
+++ b/index.html
@@ -159,6 +159,21 @@
       justify-content: center;
     }
 
+    .timed-popup {
+      position: fixed;
+      top: 20%; /* Adjust as needed for top half positioning */
+      left: 50%;
+      transform: translateX(-50%);
+      background-color: rgba(0, 0, 0, 0.7);
+      color: white;
+      padding: 10px;
+      border-radius: 5px;
+      /* opacity: 0; */
+      /* visibility: hidden; */
+      z-index: 1000; /* Ensures it floats above other elements */
+      /* transition: opacity 0.5s, visibility 0.5s; */
+    }
+
     .frame {
       background-color: #301708;
       border-radius: 15px;
@@ -522,7 +537,7 @@
       message: "Nytt spel!",
       callback: () => sendGameStartedEvent(),
       element: qrCodeContainer,
-      secondMessage: "Tryck ok för att starta spelet eller låt andra skanna koden här för att joina ditt spel."
+      secondMessage: "Andra kan skanna koden här för att joina ditt spel. Tryck OK för att starta spelet!"
     });
 
 
@@ -1029,7 +1044,8 @@
       console.log("event playerId:"+snapshot.key +" playerId:"+playerId);
       if (snapshot.key !== playerId) {
         console.log("Displaying notification");
-        displayNotification('Player ' + snapshot.key + ' joined the game');
+        //displayNotification('Player ' + snapshot.key + ' joined the game');
+        showPopup("Spelare "+ snapshot.key + " joinade!");
       }
       //updatePlayerList();
     }
@@ -1040,6 +1056,15 @@
     showModal({
       message: messageText
     });
+  }
+
+  function showPopup(messageText) {
+    let popup = document.createElement("div");
+    popup.classList.add("timed-popup");
+    popup.textContent=messageText;
+    let body = document.querySelector("body");
+    body.appendChild(popup)
+    setTimeout(()=> body.removeChild(popup), 3000);
   }
 
   // function updatePlayerList() {
@@ -1062,6 +1087,7 @@
   scanQRCode(new URLSearchParams(window.location.search));
   updateGameState();
   console.log("Gamestate: " + gameState.toString());
+
   //}
   // catch (error){
   //     let el = document.createElement("div");
